--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    session.handler.doctrine:
+        class: Symfony\Component\HttpFoundation\Session\Storage\Handler\NativeFileSessionHandler
+        arguments: [ '%kernel.cache_dir%/sessions' ]
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
